# NeuroLetter

./: README.md
GUI/: CMakeLists.txt~  test.cpp  test.cpp~
GUI/cmake_modules/: FindSFML.cmake
Merge_final/: CMakeLists.txt  CMakeLists.txt~  DisplayImage.cpp  DisplayImage.hpp
Merge_final/release/: CMakeCache.txt  DisplayImage  Makefile  cmake_install.cmake  new.txt
NeuronalNetwork/: Makefile  main.cpp  test2.cpp
prepross/: CMakeCache.txt  DisplayImage  DisplayImage.cpp  DisplayImage.cpp~  DisplayImage.hpp  DisplayImage.hpp~  Makefile  cmake_install.cmake
prepross_2/: CMakeCache.txt  DisplayImage  DisplayImage.cpp  DisplayImage.hpp  DisplayImage.hpp~  Makefile  cmake_install.cmake  new.txt
